Fix:layout breaks when we click back button in my collection page

--- a/style.css
+++ b/style.css
@@ -5028,7 +5028,7 @@ body {
 .features,
 .footer-container {
   width: 100%;
-  max-width: 1200px;
+  
   margin: 0 auto;
   box-sizing: border-box;
 }
